# internal/adapters/driver/handler/router.go
@@ -31,11 +31,16 @@ func SetupRouter(db *gorm.DB) *echo.Echo {
 // @BasePath /
 func mapRoutes(echo *echo.Echo, orm *gorm.DB) {
 	handler := NewHandler(orm)
-	echo.GET("/swagger*", echoSwagger.WrapHandler)
+
+	echo.GET("/swagger/*", echoSwagger.WrapHandler)
+
 	echo.GET("/items", handler.NewItemHandler().GetAll)
 	echo.POST("/item", handler.NewItemHandler().Create)
 	echo.PUT("/item/:id", handler.NewItemHandler().Update)
 	echo.DELETE("/item/:id", handler.NewItemHandler().Delete)
+
+	echo.GET("/orders", handler.NewOrderHandler().GetAll)
+	echo.POST("/checkout", handler.NewOrderHandler().Checkout)
 
 	echo.Logger.Fatal(echo.Start(":8000"))
 }
